# ShapeServer

./: .gitignore  README.md  ShapeServer.cabal  sample.shapes
app/: Ansi.hs  Example.hs  Main.hs  Render.hs  Shapes.hs
