name:                ShapeServer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/HugoDelval/ShapeServer#readme
license:             BSD3
license-file:        LICENSE
author:              DELVAL Hugo
maintainer:          hugodelval@gmail.com
copyright:           Copyleft
category:            Unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ShapeServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-svg
                     , blaze-html
                     , scotty
                     , unix
                     , ShapeServer
  default-language:    Haskell2010

test-suite ShapeServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ShapeServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HugoDelval/ShapeServer
